Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-130608

Dropdown in WebEngineView are not zoomed and aligned properly when parent of WebEngineView is zoomed.

XMLWordPrintable

    • Linux/X11, macOS
    • a245afb45 (dev), 7044fe688 (6.9), 8987a7b48 (6.8.2), 91c0e4224 (6.8), 0023b20d9 (tqtc/lts-6.5)

      When using WebEngineView in a QML application, dropdown elements within the web content do not zoom and align correctly when the parent container of the WebEngineView is zoomed. This issue affects the visual consistency and usability of web-based dropdowns in applications that require dynamic zooming of the UI.

      Sample Application Description :
      The attached sample application has four buttons:

      1. WebView Zoom In
      2. WebView Zoom Out
      3. Parent of WebView(Rect) Zoom In
      4. Parent OF WebView(Rect) Zoom Out

      WebView Zoom In/Out: These buttons zoom only the WebEngineView. When these buttons are clicked, the zoom and alignment of the dropdown elements within the WebEngineView work correctly.
      Parent of WebView(Rect) Zoom In/Out: These buttons zoom the parent container of the WebEngineView (a Rectangle in this case). After clicking these buttons, if you interact with any dropdown elements within the web content loaded in the WebEngineView, you will observe that the dropdown boxes are neither zoomed nor aligned properly.
      This issue highlights a discrepancy in the behavior of dropdown elements when the parent container of the WebEngineView is zoomed, as opposed to zooming the WebEngineView itself.

        1. Dropdown Issue.zip
          2 kB
          Mehdi Belila
        For Gerrit Dashboard: QTBUG-130608
        # Subject Branch Project Status CR V

            mibrunin Michael Bruning
            mahdi.belila Mehdi Belila
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: